force-app/main/default/objects/LLC_BI__Legal_Entities__c/fields/WKDDP__Ben_Rel_Type_Other_Desc__c.field-meta.xml
<CustomField>
    <fullName>WKDDP__Ben_Rel_Type_Other_Desc__c</fullName>
    <description>Users populate this optional text field with the &apos;other&apos; type description of relationship between the responsible individual&apos;s and the CESA&apos;s designated beneficiary.</description>
    <inlineHelpText>Enter the &apos;other&apos; type description of the relationship between the responsible individual&apos;s and the CESA&apos;s designated beneficiary.</inlineHelpText>
    <label>Beneficiary Relationship Type Other Desc</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>