force-app/main/default/objects/LLC_BI__Legal_Entities__c/fields/WKDDP__Beneficiary_Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>WKDDP__Beneficiary_Relationship_Type__c</fullName>
    <description>Users select from this optional picklist the responsible individual&apos;s relationship to the CESA&apos;s designated beneficiary.</description>
    <inlineHelpText>Select the responsible individual&apos;s relationship to the CESA&apos;s designated beneficiary.</inlineHelpText>
    <label>Beneficiary Relationship Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Parent</fullName>
            </value>
            <value>
                <fullName>Guardian</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>