force-app/main/default/objects/LLC_BI__Legal_Entities__c/fields/WKDDP__Relationship_Description__c.field-meta.xml
<CustomField>
    <fullName>WKDDP__Relationship_Description__c</fullName>
    <description>Users populate this optional text field that provides a description of the relationship between the account holder and the account.</description>
    <inlineHelpText>Enter a description of the relationship between the account holder and the account.</inlineHelpText>
    <label>Relationship Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>