force-app/main/default/objects/LLC_BI__Legal_Entities__c/fields/WKDDP__Suppress_Signature__c.field-meta.xml
<CustomField>
    <fullName>WKDDP__Suppress_Signature__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Users select this optional boolean field when the account holder should not print in the signature block of the signature card. By default, it is false.</description>
    <inlineHelpText>Select this checkbox when the account holder should not print in the signature block of the signature card.</inlineHelpText>
    <label>Suppress Signature</label>
    <type>Checkbox</type>
</CustomField>