force-app/main/default/objects/LLC_BI__Legal_Entities__c/listViews/LLC_BI__All.listView-meta.xml
<ListView>
    <fullName>LLC_BI__All</fullName>
    <columns>NAME</columns>
    <columns>LLC_BI__Account__c</columns>
    <columns>LLC_BI__Borrower_Type__c</columns>
    <columns>LLC_BI__Relationship_Type__c</columns>
    <columns>LLC_BI__Loan__c</columns>
    <columns>LLC_BI__Deposit__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>